# paymonero-ui

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  qr.rs
templates/: base.html  dashboard.html  invoice_detail.html  pay.html  pay_status.html
