[package]
name = "paymonero-ui"
version = "0.1.0"
edition = "2021"
description = "PayMonero Admin Dashboard & Payment Pages — zero JS, Tor-friendly"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }

# Templating (compile-time, zero JS)
askama = "0.12"
askama_axum = "0.4"

# Database (read-only access to PayMonero's DB)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qrcode = "0.14"
base64 = "0.22"
